// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventStartDateFilter renders with selection: a date range 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between"
        type="flex"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <h3
            class="pb1 fw4"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col"
        />
      </div>
      <div
        class="ant-row w-100"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <div
            class="ant-row ant-row-middle mb3"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="false"
                class="ant-switch"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1"
            >
              From:
            </div>
            <div
              class="ant-row mb2"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title="2019-05-05"
                    value="2019-05-05"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-picker-clear"
                    role="button"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1"
            >
              To:
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title="2020-01-01"
                    value="2020-01-01"
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="ant-picker-clear"
                    role="button"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EventStartDateFilter renders with selection: all 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between"
        type="flex"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <h3
            class="pb1 fw4"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col"
        />
      </div>
      <div
        class="ant-row w-100"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <div
            class="ant-row ant-row-middle mb3"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="false"
                class="ant-switch"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1"
            >
              From:
            </div>
            <div
              class="ant-row mb2"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title=""
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1"
            >
              To:
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title=""
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EventStartDateFilter renders with selection: upcoming 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between"
        type="flex"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <h3
            class="pb1 fw4"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col"
        />
      </div>
      <div
        class="ant-row w-100"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <div
            class="ant-row ant-row-middle mb3"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="true"
                class="ant-switch ant-switch-checked"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1"
            >
              From:
            </div>
            <div
              class="ant-row mb2"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title=""
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1"
            >
              To:
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title=""
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EventStartDateFilter renders without selection 1`] = `
<DocumentFragment>
  <div
    class="ant-row pa3 bg-white mb3"
    data-testid="event-start-date-filter"
  >
    <div
      class="w-100 br1 mb3"
    >
      <div
        class="ant-row ant-row-space-between"
        type="flex"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <h3
            class="pb1 fw4"
          >
            Start Date
          </h3>
        </div>
        <div
          class="ant-col"
        />
      </div>
      <div
        class="ant-row w-100"
      >
        <div
          class="ant-col"
          style="flex-basis: auto;"
        >
          <div
            class="ant-row ant-row-middle mb3"
            style="margin-left: -4px; margin-right: -4px;"
            type="flex"
          >
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              <button
                aria-checked="false"
                class="ant-switch"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
            <div
              class="ant-col"
              style="padding-left: 4px; padding-right: 4px;"
            >
              Upcoming items
            </div>
          </div>
          <div>
            <div
              class="ant-row mb1"
            >
              From:
            </div>
            <div
              class="ant-row mb2"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="start-date-picker"
                    data-testid="start-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title=""
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-row mb1"
            >
              To:
            </div>
            <div
              class="ant-row"
            >
              <div
                class="ant-picker w-100"
              >
                <div
                  class="ant-picker-input"
                >
                  <input
                    autocomplete="off"
                    data-test-id="end-date-picker"
                    data-testid="end-date-picker"
                    placeholder="Select date"
                    readonly=""
                    size="12"
                    title=""
                    value=""
                  />
                  <span
                    class="ant-picker-suffix"
                  >
                    <span
                      aria-label="calendar"
                      class="anticon anticon-calendar"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="calendar"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
